--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -1,8 +1,8 @@
 ---
 layout: lecture
-title: Virtuelle maskiner och infrastruktur som kod
+title: Automatisering av bygg och release
 lectureDate: Onsdag den 21:e April 2021
-permalink: /lectures/vm
+permalink: /lectures/ci
 ---
 
 Lektion 2 av 12
