--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -2,10 +2,12 @@
 layout: lecture
 title: Automatisering av bygg och release
 lectureDate: Onsdag den 21:e April 2021
-permalink: /lectures/ci
+permalink: /cloud-lectures/ci
 ---
 
 Lektion 2 av 12
+
+Github actions
 
 ## Lektionsplan
 
