--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -7,7 +7,9 @@ permalink: /cloud-lectures/ci
 
 Lektion 2 av 12
 
-Github actions
+Ett viktigt argument för att förflytta sin drift till molnet är automatisering. Där finns många moment man vill automatisera och standardisera, i denna lektion kommer vi praktisk att bygg av kod, men även prata om release delen.
+
+Vi kommer under hela kursen att använda Github actions som bygg system.
 
 ## Lektionsplan
 
@@ -15,6 +17,8 @@ Github actions
 
 ## Lektionslitteratur
 *Detta är material (artiklar, videoer, blogs, podcasts etc) som är den teoretiska bas för denna lektion, det antas att du har läst/set/lystnad detta innan lektionen starter.*
+
+Estimerat samlat "läs"-tid för lektionslittertur är **{{site.data.lecture_automatisering_av_bygg_och_release.contentTimeTotal.literatureTime}} min** (för den frivilliga fördjupningslitteratur gäller {{site.data.lecture_automatisering_av_bygg_och_release.contentTimeTotal.optionalLiteratureTime}} min)
 
 {% include lecturenontopics.html lectureData="lecture_automatisering_av_bygg_och_release" %}
 {% include lecturetopics.html lectureData="lecture_automatisering_av_bygg_och_release" %}
