--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -23,13 +23,12 @@ Estimerat samlat "läs"-tid för lektionslittertur är **{{site.data.lecture_aut
 {% include lecturenontopics.html lectureData="lecture_automatisering_av_bygg_och_release" %}
 {% include lecturetopics.html lectureData="lecture_automatisering_av_bygg_och_release" %}
 
-## Övning med buddy
+# Övningsuppgifter
 
-Se uppgift från classroom
+TBA
 
-# Individuell uppgift
-
-## Indviduellt blogg post
+# Individuell inlämningsuppgift
+## Blogg post
 
 Gör ett nytt inlägg på din blog som du gjorde i samband med lektion 1. Det rekomenderas att skriva på samma språk som din första blogg post.
 
