--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -23,19 +23,36 @@ Estimerat samlat "läs"-tid för lektionslittertur är **{{site.data.lecture_aut
 {% include lecturenontopics.html lectureData="lecture_automatisering_av_bygg_och_release" %}
 {% include lecturetopics.html lectureData="lecture_automatisering_av_bygg_och_release" %}
 
-# Övningsuppgifter
+# Indviduella övningsuppgifter
 
-TBA
+Gå igennom dissa labs på GitHub, dom är en introduktion til GitHub actions som vi kommer att jobba med under hela kursen som dissa är en del av:
+* [GitHub actions: Hello World](https://lab.github.com/githubtraining/github-actions:-hello-world)
+* [Github actions: Continuous Integration](https://lab.github.com/githubtraining/github-actions:-continuous-integration)
+
+Estimerat tid: 143 min
+
+# Övningsuppgifter i grupp
+
+Gå tillsammans två och två (kanske tre, men helst två).
+
+Välj ett projekt som en av er tidigera har jobbet med, det kan vara ett projekt från Dataåtkomst eller Webbutvecling backend. Förslagvis SpacePark V1 från Dataåtkomst.
+* Gör en [fork](https://docs.github.com/en/github/collaborating-with-pull-requests/working-with-forks/about-forks) på GitHub av projektet till ditt eget repo.
+* I denna ägen fork implementera en GitHub action CI pipeline
+
+Om projektet som ni har forkat innehåller flera "projects" är det viktigt att alla dealar av projektet byggas.
 
 # Individuell inlämningsuppgift
+
+Inlämnas via PingPong, men sparas i GitHub
 ## Blogg post
 
-Gör ett nytt inlägg på din blog som du gjorde i samband med lektion 1. Det rekomenderas att skriva på samma språk som din första blogg post.
+Gör ett nytt inlägg på din blogg som du gjorde i samband med lektion 1. Det rekomenderas att skriva på samma språk som din första blogg post.
 
-Deadline på PingPong, XXdag den XX:e XXX kl 23:55. Posta ett länk till dagens blog post.
+Deadline på PingPong, torsdag den 9:e september kl 23:55. Posta ett länk till dagens blog post.
 
 Skriv ett blogg post som följer denna lektion ska innehålla en text som svara på dissa frågor:
-* 1
-* 2
+* Vad är en CI pipline
+* Hur har du implementet en CI pipeline i GitHub actions på ett eksisterende projekt, vilka steg har du gått igenom?
+* Beskrivning din GitHub action workflow YAML fil.
 
 Om du vill kan du nu välja att dela denna blogpost på sociala media (Linked, Twitter, Facebook etc.) kom ihåg att använda lämpliga hashtags som: #1 #2
