--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -38,6 +38,7 @@ Gå tillsammans två och två (kanske tre, men helst två).
 Välj ett projekt som en av er tidigera har jobbet med, det kan vara ett projekt från Dataåtkomst eller Webbutvecling backend. Förslagvis SpacePark V1 från Dataåtkomst.
 * Gör en [fork](https://docs.github.com/en/github/collaborating-with-pull-requests/working-with-forks/about-forks) på GitHub av projektet till ditt eget repo.
 * I denna ägen fork implementera en GitHub action CI pipeline
+* Se till att pipelinen aktiveras vid varje *commit* till din fork, på alla branchs
 
 Om projektet som ni har forkat innehåller flera "projects" är det viktigt att alla dealar av projektet byggas.
 
