Adds introduction to github actions

--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -42,6 +42,10 @@ Välj ett projekt som en av er tidigera har jobbet med, det kan vara ett projekt
 
 Om projektet som ni har forkat innehåller flera "projects" är det viktigt att alla dealar av projektet byggas.
 
+Ett par introduktioner till GitHub actions:
+* <https://gabrieltanner.org/blog/an-introduction-to-github-actions>
+* <https://devblogs.microsoft.com/premier-developer/intro-to-github-actions/>
+
 # Individuell inlämningsuppgift
 
 Inlämnas via PingPong, men sparas i GitHub
