Changes title for blogs

--- a/lectures/02-ci.md
+++ b/lectures/02-ci.md
@@ -51,7 +51,7 @@ Ett par introduktioner till GitHub actions:
 # Individuell inlämningsuppgift
 
 Inlämnas via PingPong, men sparas i GitHub
-## Blogg post
+## Blogg 02: Automatisering av bygg och release
 
 Gör ett nytt inlägg på din blogg som du gjorde i samband med lektion 1. Det rekomenderas att skriva på samma språk som din första blogg post.
 
